--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,4 +1,6 @@
-
+.offline {
+  filter: grayscale(1);
+}
 .homeContainer {
   background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
   background-size: 400% 400%;
@@ -18,16 +20,16 @@
   }
 }
 
-.form{
-    margin: 0 auto;
-    width: fit-content;
-    color: white;
+.form {
+  margin: 0 auto;
+  width: fit-content;
+  color: white;
 }
 
-.uploadImage{
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 5%;
-    border: 5px solid red;
+.uploadImage {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 5%;
+  border: 5px solid red;
 }
