--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,28 @@
 }
 
 .appContainer {
+  height: 100vh;
+  display: flex;
+
+  flex-direction: column;
+  /* display: grid;
+  grid-template-rows: 1fr 1fr; */
+}
+.content {
   height: 100%;
+overflow-y: hidden;
+  background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
