--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,19 +1,14 @@
 .card {
   width: 100%;
-  /* max-width: 300px; */
 }
 .coverImgBg {
-  /* height: 100%; */
-  /* width: 100%; */
   overflow: hidden;
-  /* border-top-right-radius: 15px;
-  border-top-left-radius: 15px; */
-
-  background-color: antiquewhite;
+}
+.coverImg:hover {
+  scale: 1.1;
 }
 .coverImg {
-  /* height: 100%; */
-
+  transition: all 0.3s;
+  overflow: hidden;
   width: 100%;
-  /* background-color: rgba(255, 0, 0, 0.486);  */
 }
