--- a/src/components/Feed/Feed.module.css
+++ b/src/components/Feed/Feed.module.css
@@ -7,14 +7,23 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: minmax(150px, 1fr);
   row-gap: 8rem;
+
   column-gap: 8rem;
   align-items: center;
   padding: 6rem;
+  /* overflow: scroll; */
+  /* grid-auto-flow: column; */
+  /* grid-auto-flow: column;
+  grid-auto-columns: 300px; */
 }
 .feedContainer {
-  background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
+  /* background-color: red; */
+  overflow-y: scroll;
+  /* overflow: hidden; */
+  max-height: 100%;
+  /* background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 15s ease infinite; */
 }
 @keyframes gradient {
   0% {
@@ -28,8 +37,9 @@
   }
 }
 
-@media (max-width: 575px) {
+@media (max-width: 720px) {
   .feed {
     grid-template-columns: 1fr;
+    padding: 32px;
   }
 }
