--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -2,10 +2,10 @@
   filter: grayscale(1);
 }
 .homeContainer {
-  background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
+  /* background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  height: 100%;
+  animation: gradient 15s ease infinite; */
+  /* height: 100%; */
 }
 
 @keyframes gradient {
